[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nthlayer-common"
version = "0.1.0"
description = "Shared utilities for the NthLayer ecosystem"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
